--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
   <html> 
    <head>
     <title>why u here</title>
-    <meta content="TITle" property="og:title" />
+    <meta property="og:title" content="Embeds" key="title" />
     <meta content="Site Description" property="og:description" />
     <meta content="duck.com" property="og:url" />
-    <meta content="https://cdn.discordapp.com/attachments/973360873299116032/991387500289466428/gatitov3.png" property="og:image" />
+    <meta property="og:site_name" content="yeet" />
+    <meta content="https://discord.com/assets/2d20a45d79110dc5bf947137e9d99b66.svg" property="og:image" />
     <meta content="#43B581" data-react-helmet="true" name="theme-color" />
     <meta name="twitter:card" content="summary_large_image">
    </head>
