--- a/index.html
+++ b/index.html
@@ -9,4 +9,7 @@
     <meta content="#43B581" data-react-helmet="true" name="theme-color" />
     <meta name="twitter:card" content="summary_large_image">
    </head>
+    <body> 
+      <h1> stuff goes here</h1>
+    </body>
   </html
